# stripe-integration

./: .env  .gitignore  alembic.ini  pyproject.toml
migrations/: env.py
migrations/versions/: 2bd42e22afbd_init.py  4932e6835c1b_fix_and_otp_table_added.py  8d01c2ffb662_added_relationship.py  fb17cc07f13e_otp_and_relation.py
src/: main.py
src/core/: __init__.py  config.py  db.py  dependencies.py  models.py  stripe_api.py  stripe_service.py  utils.py
src/router/: endpoints.py
src/user/: api.py  models.py  utils.py
